--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     },
     "autoload":{
         "psr-0":{
-            "Xpmock":"src"
+            "Xpmock":"src",
+            "Xpmock2":"src"
         }
     }
 }
