--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
     "require":{
-        "php":">=5.4.0"
+        "php":">=5.3.0"
     },
     "autoload":{
         "psr-0":{
-            "Xpmock":"src",
-            "Xpmock2":"src"
+            "Xpmock":"src"
         }
     }
 }
