--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
     "require":{
         "php":">=5.3.0"
     },
+    "require-dev":{
+        "phpunit/phpunit":"3.7.*"
+    },
     "autoload":{
         "psr-0":{
             "Xpmock":"src"
